--- a/respuestas.tex
+++ b/respuestas.tex
@@ -294,7 +294,12 @@ FF?.\\
     mes por minuto. Sabiendo que el tama ̃no medio de cada frame es de 10.000 bits, calcule el
     rendimiento de esta red.\\
     \item Explique en qué consiste el protocolo ARP. Además de algún ejemplo de un ataque a la seguri-
-    dad de dicho protocolo.
-    El protocolo ARP es un estándar TCP/IP que asocia las direcciones IP y MAC de los equipos conectados a la red. Un ejemplo de ataque utilizando ARP es el ARP-Spoofing consiste en enviar paquetes ARP falsos para que un router llene su tabla ARP con información falsa, de esta manera todos los datos que se supone llegarían a nuestra víctima llegaran al pc con la dirección MAC que hayamos especificado en el paquete falso.
+    dad de dicho protocolo.\\
+    El protocolo ARP es un estándar TCP/IP que asocia las direcciones IP y MAC de los equipos conectados a la red. Un ejemplo de ataque utilizando ARP es el ARP-Spoofing consiste en enviar paquetes ARP falsos para que un router llene su tabla ARP con información falsa, de esta manera todos los datos que se supone llegarían a nuestra víctima llegaran al pc con la dirección MAC que hayamos especificado en el paquete falso.\\
+    \item Explique por qué las entradas de una caché de ARP de un host de red se eliminan si no se
+    utilizan durante un período de tiempo.\\
+    Para dar espacio a nuevas direcciones MAC e IP de otros equipos que se estén usando más, ya que al estar en la tabla ARP el dispositivo no tendrá que mandar un paquete en busca de donde está el equipo de destino y el proceso de transferencia de datos será mas rápido.\\
+    \item 
+    
 \end{enumerate}
 \end{document}
