--- a/respuestas.tex
+++ b/respuestas.tex
@@ -299,7 +299,12 @@ FF?.\\
     \item Explique por qué las entradas de una caché de ARP de un host de red se eliminan si no se
     utilizan durante un período de tiempo.\\
     Para dar espacio a nuevas direcciones MAC e IP de otros equipos que se estén usando más, ya que al estar en la tabla ARP el dispositivo no tendrá que mandar un paquete en busca de donde está el equipo de destino y el proceso de transferencia de datos será mas rápido.\\
-    \item 
+    \item Utilizando el software Wireshark se pide realizar la captura de una secuencia ARP. Identifique
+    cada una de las etapas del proceso.\\
+    
+    \item ¿Por qué debería existir menos colisiones en una red Ethernet conmutada comparada con una
+red Ethernet tradicional?.\\
+    
     
 \end{enumerate}
 \end{document}
