--- a/respuestas.tex
+++ b/respuestas.tex
@@ -272,7 +272,7 @@ y las funciones que cumplen.\\
 \item ¿Cual es el mínimo y maximo tamaño de un frame Ethernet?.\\
     El mínimo son 84 bytes y el máximo 1542 bytes
 \item ¿Por que es importante la etapa de preámbulo al comienzo de cada frame?.\\
-
+    Por que le indica al recetorel comienzo de un frame, para que este se prepare para recibirlo.
 \item Explique las diferencias entre direcciones logicas y direcciones físicas.
     -La dirección logica(IP) no debe confundirse con la dirección MAC, porque la MAC es un identificador de 48 bits para identificar 
     de forma única  a la tarjeta de red y no depende del protocolo de conexión utilizado ni de la red.\\
