--- a/respuestas.tex
+++ b/respuestas.tex
@@ -314,6 +314,34 @@ Por que en las redes conmutados los equipos no comparten un canal unico, en camb
     \item Si la atenuacion de una senal a trav´es de un medio guiado es de -10 dB. Indique la potencia de la senal recibida si se transmiti´o a una potencia de 300 mW(falta)\\
     \item Explique lo que entiende por relacion senal a ruido SNR en dB\\
     Es la relacion entre la potencia que transmite y la potencia del ruido que la daña\\
+    \item  Explique con sus propias palabras el Teorema de la capacidad de Shannon. \\
+    El teorema de Shannon basicamente lo que nos indica es la maxima cantidad de datos que pueden ser enviados sin error y de calcula de la manera:\\
+            C=BLog 2 (1 + S/N)\\
+            C es la cantidad de datos enviados sin error\\
+            B es el ancho de banda medidos en hertz\\
+            S es la potencia de la señal util\\
+            N es la potencia del ruido\\
+    \item  Las condiciones de dise˜no de un sistema de comunicaciones que cuenta con un ancho de banda de 1MHz y presenta una SNR de 24dB es que alcance los 4Mbps.Indicar si este proyecto bajo las condiciones de ruido y ancho de banda es viable.(COMPLETAR) \\
+    \item Un sistema de comunicaciones que posee un ancho de banda de 70 MHz y opera a 100 Mbps. Indicar la m´ınima SNR para que el sistema pueda funcionar(COMPLETAR) \\
+    \item  Compare la maxima capacidad del canal del par trenzado y el cable coaxial.Para el par trenzado el ancho de banda es de 100MHz y la SNR es de 20dB.Para el cable coaxial el ancho de banda es de 250 MHz y su SNR es de 22 dB. (COMPLETAR)\\
+    \item  ¿Cual es la capacidad para un canal de un teletipo de 300Hz de ancho de banda con una relacion senal a ruido de 3dB? (COMPLETAR)\\
+    \item Sea un canal con una capacidad de 20Mbps.El ancho de banda de dicho canal es 3MHz¿Cual es la relacion senal a ruido admisible para conseguir la mencionada capacidad? (COMPLETAR)\\
+    \item  Un sistema de comunicaciones trabaja a 100 Mbps y utiliza un ancho de banda de 70 MHz ¿Cual es la cota inferior de la relacion SNR para que el sistema pueda funcionar?. Calcule la eﬁciencia espectral maxima que se puede alcanzar con una SNR de 0 dB. (COMPLETAR)\\
+    \item En que se diferencias los medios guiados de transmision de los no guiados\\
+    Que en los medios guiados la transmision de infirmacion se logra a traves de cables interconectados entre los equipos, mientrs que en los no guiados se realiza de manera inalambrica ya sea mediante antenas, las cuales emiten los datos en forma de señal electromagnetica\\
+    \item Indique 3 fuentes de distorsion de la señal en un cable UTP\\
+    -Emisiones electromagneticas del entorno\\
+    -Distancias mayores a 100 mt entre terminales\\
+    -(COMPLETAR)\\
+    \item Indique las diferencias entre los cables UTP, STP y FTP\\
+    El cable UTP no pose ningun tipo de blindaje, el STP pose un cubierta exterior de aluminio que protege de señales electromagneticas exteriores, y el FTP pose blindaje tanto en los pares trenzados como en el exterior y asi evita cualquier tipo de distorcion que puedan sufrir los datos.\\
+    \item  ¿Por que el cable coaxial es superior al par trenzado?.\\
+    Es superior solo en el hecho que es mas inmune a señales electromagneticas del exterior ya que este posee materiales aislantes.\\
+    \item Explique el concepto de impedacia de los medios de transmision.¿Porque es importante tener en cuenta este parametro al momento de interconectar equipos? \\
+    La impedancia es la relacion entre la tension y intenciada de corriente, es importante tenerla en cuenta al momento de armar una red ya que si un medio recive una impedancia mayor a la maxima que admite, este se puede quemar y dañar toda la red.\\
+    \item ¿Cual es la ventaja de un par trenzado blindado sobre el par trenzado normal?.\\
+    El par trenzado blindado es resistente a las emisiones electromagneticas del exterior, por lo que sus datos no se veran afectados por estas emisiones.\\
+    \item ¿A que se reﬁeren las pruebas de NEXT, FEXT, PSNEXT y PSFEXT, ELFEXT, PS-ELFEXT en cable UTP?\\
     
     
     
