--- a/respuestas.tex
+++ b/respuestas.tex
@@ -279,9 +279,8 @@ y las funciones que cumplen.\\
     -La direecion fisica(MAC) es permanente y no varía, en cambio una direccion IP puede ser variable dependiendo del protocolo
     de conexión utlizado en la red.\\
 
-\item En relacion a una dirección MAC Ethernet, explique el propósito de los primeros 24 bits. ¿Qué
-es OUI en una direccion MAC?, ¿qué indica una dirección MAC de destino FF-FF-FF-FF-FF- ´
-FF?.\\
+    \item En relacion a una dirección MAC Ethernet, explique el propósito de los primeros 24 bits. ¿Qué es OUI en una direccion MAC?,
+    ¿qué indica una dirección MAC de destino FF-FF-FF-FF-FF-FF?.\\
     Los primeros 24 bits son el denominado OUI (idenfitificador único de organizacion) el cual es comprado a la autoridad de el 
     el registro del instituto de Ingeniería Électrica y Electrónica(IEEE).Estos bits son un  identificador único,que identifica a 
     cada empresa u organización (llamados asignados) a nivel mundial y reserva un bloque en cada posible identificador derivado para 
@@ -295,16 +294,22 @@ FF?.\\
     rendimiento de esta red.\\
     \item Explique en qué consiste el protocolo ARP. Además de algún ejemplo de un ataque a la seguri-
     dad de dicho protocolo.\\
-    El protocolo ARP es un estándar TCP/IP que asocia las direcciones IP y MAC de los equipos conectados a la red. Un ejemplo de ataque utilizando ARP es el ARP-Spoofing consiste en enviar paquetes ARP falsos para que un router llene su tabla ARP con información falsa, de esta manera todos los datos que se supone llegarían a nuestra víctima llegaran al pc con la dirección MAC que hayamos especificado en el paquete falso.\\
+    El protocolo ARP es un estándar TCP/IP que asocia las direcciones IP y MAC de los equipos conectados a la red. Un ejemplo de
+    ataque utilizando ARP es el ARP-Spoofing consiste en enviar paquetes ARP falsos para que un router llene su tabla ARP con
+    información falsa, de esta manera todos los datos que se supone llegarían a nuestra víctima llegaran al pc con la dirección MAC
+    que hayamos especificado en el paquete falso.\\
     \item Explique por qué las entradas de una caché de ARP de un host de red se eliminan si no se
     utilizan durante un período de tiempo.\\
-    Para dar espacio a nuevas direcciones MAC e IP de otros equipos que se estén usando más, ya que al estar en la tabla ARP el dispositivo no tendrá que mandar un paquete en busca de donde está el equipo de destino y el proceso de transferencia de datos será mas rápido.\\
+    Para dar espacio a nuevas direcciones MAC e IP de otros equipos que se estén usando más, ya que al estar en la tabla ARP el
+    dispositivo no tendrá que mandar un paquete en busca de donde está el equipo de destino y el proceso de transferencia de datos
+    será mas rápido.\\
     \item Utilizando el software Wireshark se pide realizar la captura de una secuencia ARP. Identifique
     cada una de las etapas del proceso.\\
     
     \item ¿Por qué debería existir menos colisiones en una red Ethernet conmutada comparada con una
-red Ethernet tradicional?.\\
-Por que en las redes conmutados los equipos no comparten un canal unico, en cambio las redes tradicionales se comparte el canal de transmision \\
+    red Ethernet tradicional?.\\
+    Por que en las redes conmutados los equipos no comparten un canal unico, en cambio las redes tradicionales se comparte el canal de
+    transmision \\
     \item Compare las tasas de transmision de datos para la red Ethernet tradicional, Fast Ethernet y Gigabit Ethernet\\
     La tasa de transmision de la Ethernet normal es de 10Mbps, la de Fast Ethernet es de 100Mbps, y la Gigabit Ethernet es de 1Gbps\\
     \item Indique la conﬁguracion de pines en conectores RJ45 para cables UTP cruzados FastEthernet y GigabitEthernet(falta)\\
