--- a/respuestas.tex
+++ b/respuestas.tex
@@ -347,7 +347,14 @@ y las funciones que cumplen.\\
     \item ¿Cual es la ventaja de un par trenzado blindado sobre el par trenzado normal?.\\
     El par trenzado blindado es resistente a las emisiones electromagneticas del exterior, por lo que sus datos no se veran afectados por estas emisiones.\\
     \item ¿A que se reﬁeren las pruebas de NEXT, FEXT, PSNEXT y PSFEXT, ELFEXT, PS-ELFEXT en cable UTP?\\
-    
+    Son ruebas relacionadas con la atenuacion y el crosstalk, nos ayudan para determinar la longitud maxima que puede extenderse un cable.\\
+  \item Señale las principales caracterısticas del cable de ﬁbra optica monomodo.\\
+  Posee un unico nucleo, el cual tiene un lazer led(COMPLEMENTAR)\\
+  \item Señale las principales caracterısticas del cable de ﬁbra optica multimodo. \\
+  Posee multiples nucleos, los cuales estan formados por leds(  complementar)\\
+  \item Senale las principales caracterısticas del cable de ﬁbra optica multimodo conındice gradual(COMPLETAR)\\
+  \item Explique lo que entiende por distorsion por atenuacion y distorsion por dispersion\\
+  La distorcion por atenuacion se produce por una disminucion de la potencia de la señal de transmicion a lo largo del cable, mientras que la distorcion por dispercion se produce por 
     
     
 \end{enumerate}
