--- a/respuestas.tex
+++ b/respuestas.tex
@@ -354,7 +354,17 @@ y las funciones que cumplen.\\
   Posee multiples nucleos, los cuales estan formados por leds(  complementar)\\
   \item Senale las principales caracterısticas del cable de ﬁbra optica multimodo conındice gradual(COMPLETAR)\\
   \item Explique lo que entiende por distorsion por atenuacion y distorsion por dispersion\\
-  La distorcion por atenuacion se produce por una disminucion de la potencia de la señal de transmicion a lo largo del cable, mientras que la distorcion por dispercion se produce por 
+  La distorcion por atenuacion se produce por una disminucion de la potencia de la señal de transmicion a lo largo del cable, mientras que la distorcion por dispercion se produce por un ensanchamiento de la onda, el cual aumenta con la longitud recorrida y con el ancho de la fuente.\\
+  \item Señale los distintos tipos de problemas que podrıa sufrir una ﬁbra optica\\
+  -Perdidas debido a acoplamiento con dispoditivo emisor de luz
+  -Perdidas debido a absorcion
+  -Perdidas debido a una presion externa
+  -Perdidas por radiacion debido a curvaturas 
+  -Perdidas debido a no uniformidad en el nucleo
+  -Perdidas por splicing
+  -Perdidas por acoplamiento con el receptor
+  
+  
     
     
 \end{enumerate}
