--- a/respuestas.tex
+++ b/respuestas.tex
@@ -363,6 +363,30 @@ y las funciones que cumplen.\\
   -Perdidas debido a no uniformidad en el nucleo
   -Perdidas por splicing
   -Perdidas por acoplamiento con el receptor
+  \item ¿Que es y que importancia tiene Level 3 en nuestro paıs?\\
+  Level 3 es un provedor mundial de servicios convergentes de datos, voz, video, data center, y es importante ya que es el mayor provedor de redes de sudamerica\\
+  \item . De acuerdo al enlace http://submarinecablemap.com ¿Cuantos enlaces submarinos tiene chile?. ´
+¿Cuales son sus nombres, que ciudades enlazan, quienes son los dueños y que longitud tienen
+los cables?.\\
+Posee 4 enlaces subamrinos:\\
+-South America-1(SAm-1)\\
+Dueños:Telefonica\\
+Longitud: 25000 Km\\
+Ciudades enlazadas: Arica y Valparaiso\\
+-Pan American(PAN-AM)\\
+Dueños: AT&T\\
+Longitud: 7050 Km\\
+Ciudades enlazadas: Arica\\
+-South American Crossing (SAC)/Latin American Nautilus (LAN)\\
+Dueños: Level 3\\
+Longitud: 20000 Km\\
+Ciudades enlazadas: Valparaiso\\
+-South America Pacific Link (SAPL)\\
+Dueños: Ocean Networks\\
+Longitud: 17600 Km\\
+Ciudades enlazadas: Valparaiso\\ 
+\item Si la fibra optica tiene una longitud de 500 metros, indicar cual es la diferencia entre el camino 
+optico mas corto y el camino  optico mas largo\\
   
   
     
