--- a/respuestas.tex
+++ b/respuestas.tex
@@ -265,6 +265,8 @@ siguientes especificaciones de capa física Ethernet: 10BASE2, 10BASE5, 100BASE-
 
 \item ¿Por que la distancia máxima de segmento de red es mayor para 100BASE-FX que para 100BASE- ´
 TX?.\\
+  La distancia de 100BASE-FX es mayor ya que en su composicion tiene 2 cables de fibra óptica multimodo para la recepcion y
+  transmisión.En cambio el 100BASE-TX funciona gracias a cables de categoria cat6 y modelamiento de cable cruzado.
 
 \item Dibuje el formato del frame Ethernet indicando el tamano (en bytes) de cada uno de sus campos
 y las funciones que cumplen.\\
@@ -272,7 +274,7 @@ y las funciones que cumplen.\\
 \item ¿Cual es el mínimo y maximo tamaño de un frame Ethernet?.\\
     El mínimo son 84 bytes y el máximo 1542 bytes
 \item ¿Por que es importante la etapa de preámbulo al comienzo de cada frame?.\\
-    Por que le indica al recetorel comienzo de un frame, para que este se prepare para recibirlo.
+    Por que le indica al receptor el comienzo de un frame, para que este se prepare para recibirlo.
 \item Explique las diferencias entre direcciones logicas y direcciones físicas.
     -La dirección logica(IP) no debe confundirse con la dirección MAC, porque la MAC es un identificador de 48 bits para identificar 
     de forma única  a la tarjeta de red y no depende del protocolo de conexión utilizado ni de la red.\\
