--- a/respuestas.tex
+++ b/respuestas.tex
@@ -45,8 +45,10 @@
         -Tecnología desactualizada\\
         
 \item Mencione algunas ventajas y desventajas del modelo de referencia TCP/IP híbrido.\\
-    NO ENCUENTRO INFORMACION DDD:
-
+    Ventajas:-Divide la capa de enlace de el modelo OSI en tipo WAN y LAN, a la misma vez LAN se subdivide en LLC y MAC
+             -Contiene LLC y MAC el cual agrega una confiabilidad especial a el modelo ya que apoya el intercambio de datos
+              entre equipos gracias a la direccion física
+    Desventajas: -Contiene menos capas, por lo contiene una descripcion mas amplia de una red 
 \item Indique la diferencia entre un estándar de  facto y un estándar de  jure\\
     El estándar de jure es aprobado por una organización, mientras que el de facto es un estándar aceptado pero 
     no legitimado por una organización\\
@@ -367,7 +369,7 @@ y las funciones que cumplen.\\
   -Perdidas por acoplamiento con el receptor
   \item ¿Que es y que importancia tiene Level 3 en nuestro paıs?\\
   Level 3 es un provedor mundial de servicios convergentes de datos, voz, video, data center, y es importante ya que es el mayor provedor de redes de sudamerica\\
-  \item . De acuerdo al enlace http://submarinecablemap.com ¿Cuantos enlaces submarinos tiene chile?. ´
+  \item . De acuerdo al enlace http://submarinecablemap.com ¿Cuantos enlaces submarinos tiene chile?.
 ¿Cuales son sus nombres, que ciudades enlazan, quienes son los dueños y que longitud tienen
 los cables?.\\
 Posee 4 enlaces subamrinos:\\
