--- a/respuestas.tex
+++ b/respuestas.tex
@@ -3,6 +3,7 @@
 \headertext{Respuestas tarea de preparación para la Solemne}
 \title{Tarea de preparación para la Solemne}
 \author{Ignacio Yanjari, Dagoberto Navarrete, Ignacio López, Thomas Muñoz.}
+\usepackage{graphicx}
 \begin{document}
 \maketitle
 \begin{enumerate}
@@ -272,7 +273,11 @@ TX?.\\
 
 \item Dibuje el formato del frame Ethernet indicando el tamano (en bytes) de cada uno de sus campos
 y las funciones que cumplen.\\
-
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{frame.png}
+	\caption{Frame}
+	\end{figure}\\
 \item ¿Cual es el mínimo y maximo tamaño de un frame Ethernet?.\\
     El mínimo son 84 bytes y el máximo 1542 bytes
 \item ¿Por que es importante la etapa de preámbulo al comienzo de cada frame?.\\
