--- a/respuestas.tex
+++ b/respuestas.tex
@@ -4,6 +4,8 @@
 \title{Tarea de preparación para la Solemne}
 \author{Ignacio Yanjari, Dagoberto Navarrete, Ignacio López, Thomas Muñoz.}
 \usepackage{graphicx}
+\usepackage{float}
+\graphicspath{ {img/} }
 \begin{document}
 \maketitle
 \begin{enumerate}
@@ -275,9 +277,9 @@ TX?.\\
 y las funciones que cumplen.\\
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth]{frame.png}
+	\includegraphics[width=\textwidth]{frame.jpg}
 	\caption{Frame}
-	\end{figure}\\
+\end{figure}\\
 \item ¿Cual es el mínimo y maximo tamaño de un frame Ethernet?.\\
     El mínimo son 84 bytes y el máximo 1542 bytes
 \item ¿Por que es importante la etapa de preámbulo al comienzo de cada frame?.\\
