--- a/respuestas.tex
+++ b/respuestas.tex
@@ -116,8 +116,8 @@ entre las dos tecnicas de transmisión\\
         - microfono conectado a parlante\\
         - Manipulador telegrafico\\
     -broadband:\\
-        -Videotransferencia\\
-        -\\
+        -Streaming\\
+        -Envio archivos\\
 
 \item Defina o explique: topología física y topología logica. \\
     -Topología físico 
