--- a/respuestas.tex
+++ b/respuestas.tex
@@ -33,7 +33,9 @@
     -Física: Medios mecánico para la transmision y recepción\\
 \item Resuma las funciones del modelo TCP/IP híbrido, incluyendo las 2 sub-capas de enlace de datos
 (LLC y MAC).\\
-
+	La sub-capa LLC(Software) toma los datos del protocolo de la red que generalmente son un paquete IPv4, y agrega 
+	información de control para ayudar a entregar el paquete al nodo de destino. \\
+	La sub-capa MAC(Hardware) le agrega una caracteristica más a c/computador el cual es la MAC
 
 \item Mencione algunas ventajas y desventajas del modelo OSI de ISO\\
     -Ventajas:\\
