--- a/respuestas.tex
+++ b/respuestas.tex
@@ -193,7 +193,7 @@ anillo.\\
 \item ¿Cuales son las funciones de un DTE y las de un DCE. Dé 2 ejemplos de cada uno?.\\
     DCE:\\
         Puede comprender convertidores de señales, generadores de temporización,regeneradores de impulsos y dispositivos de control, 
-        junto con el equipo con otrasfunciones como protección contra errores o llamada y respuesta automática.\\
+        junto con equipos con otras funciones como protección contra errores o llamada y respuesta automática.\\
         Ejemplos:PC,impresora\\
     DTE:\\
         Es un Equipo Terminal de Datos.Es aquel componentedel circuito de datos que hace de fuente o destino de la información,
@@ -286,7 +286,12 @@ y las funciones que cumplen.\\
     El mínimo son 84 bytes y el máximo 1542 bytes
 \item ¿Por que es importante la etapa de preámbulo al comienzo de cada frame?.\\
     Por que le indica al receptor el comienzo de un frame, para que este se prepare para recibirlo.
-\item Explique las diferencias entre direcciones logicas y direcciones físicas.
+\item Explique las diferencias entre direcciones logicas y direcciones físicas.\\
+    La direccion física MAC es un identificador de 48 bits que sirve para identificar de forma única a la tarjeta de red y no depende 
+    del protocolo ni de la conexion utilizada en la red, en cambio la direccion logica(IP) si depende de estos.
+    Tambien la (IP) no existe fisicamente en cambio la direccion fisica si se encuentra dentro de el pc
+    La IP puede ser  variable en cambio la MAC no.-
+    
     -La dirección logica(IP) no debe confundirse con la dirección MAC, porque la MAC es un identificador de 48 bits para identificar 
     de forma única  a la tarjeta de red y no depende del protocolo de conexión utilizado ni de la red.\\
     -La direecion fisica(MAC) es permanente y no varía, en cambio una direccion IP puede ser variable dependiendo del protocolo
