--- a/respuestas.tex
+++ b/respuestas.tex
@@ -403,8 +403,29 @@ Ciudades enlazadas: Valparaiso\\
 Dueños: Ocean Networks\\
 Longitud: 17600 Km\\
 Ciudades enlazadas: Valparaiso\\ 
-\item Si la fibra optica tiene una longitud de 500 metros, indicar cual es la diferencia entre el camino 
-optico mas corto y el camino  optico mas largo\\
+\item Si la fibra óptica tiene una longitud de 500 metros, indicar cuál es la diferencia entre el camino 
+óptico más corto y el camino  óptico más largo(No entender :c)\\
+\item  Un haz de luz viaja a través de un medio menos denso. ¿Qué le ocurre a haz en cada uno de los siguientes casos? \\
+a) El ángulo de incidencia es menor que el ángulo crıtico: Cuando el ángulo de incidencia es menor al crítico el haz de luz ingresa al medio más denso pero sufre refracción por lo que entra con un ángulo menor al que entro.\\
+b) El ángulo de incidencia es igual al ángulo crıtico: El Haz de luz de luz va a ir paralelo a la separación entre los dos medios y no va a entrar al más denso.\\
+c) El ángulo de incidencia es mayor que el ángulo crıtico: El haz de luz es reflejado por la superficie más densa por lo que no entra a esta.\\
+\item  El índice de refracción del núcleo de una fibra óptica es de 1.5 y su revestimiento tiene un índice de 1.485. Indique: el máximo ángulo del cono de aceptación.(COMPLETAR)\\
+\item  Indique las ventajas de la fibra óptica sobre el cable coaxial y el par trenzado.\\
+-Grandes velocidades de transmisión de datos y mayor ancho de banda\\
+-Inmune a interferencias electromagnéticas\\
+-Baja perdida por atenuación\\
+-Comunicación mas segura\\
+-Cables mas ligeros\\
+-Mayor periodo de vida en comparación con el coaxial o el par trenzado\\
+\item  Indique 6 diferencias entre la Fibra Óptica monomodo y multimodo.\\
+-La fibra monomodo posee un solo núcleo mientras que la monomodo posee múltiples núcleos.\\
+-La fibra monomodo posee un mayor ancho de banda que la multimodo.\\
+-La fibra monomodo posee menor atenuación que la multimodo.\\
+-La fibra monomodo cubre mayores distancias que la multimodo.\\
+-La fibra multimodo es de más fácil instalación.\\
+-La fibra multimodo es de uso doméstico mientras que la monomodo es de uso industrial.\\
+\item 
+
   
   
     
