--- a/respuestas.tex
+++ b/respuestas.tex
@@ -424,7 +424,23 @@ c) El ángulo de incidencia es mayor que el ángulo crıtico: El haz de luz es r
 -La fibra monomodo cubre mayores distancias que la multimodo.\\
 -La fibra multimodo es de más fácil instalación.\\
 -La fibra multimodo es de uso doméstico mientras que la monomodo es de uso industrial.\\
-\item 
+\item Indique los anchos de bandas disponibles para líneas dedicadas del tipo T y E.\\
+La línea T es un tipo de línea que puede trasnportar mas datos que las lineas comunes, mientras que la e (NO HAY NADA :c)\\
+\item  Indique las principales características del código Manchester.\\
+Es un método de codificación eléctrica, esta codificación trabaja identificando los cambios de onda si pasa de positivo a negativo representa un uno, por el contrario si pasa de negativo a positivo representa un cero.\\
+\item Bosqueje la codificación Manchester para el ﬂujo de bits: 0001110101.(INSERTE IMG CON ESO)\\
+\item  Bosqueje la codificación diferencial Manchester para el ﬂujo de bits del problema anterior. Suponga que la línea se encuentra inicialmente en el estado bajo.(INSERT RESPUESTA)\\
+\item Señale el estándar ANSI/EIA/TIA en vigencia actualmente relacionado con cableado estructurado.\\
+El estándar actualmente utilizado es el ANSI/TIA/EIA-568-B tanto la variante B1 como la B2\\
+\item En la implementación del cableado estructurado para un edificio de propósito general (no necesariamente comercial), ¿que estándares ANSI/EIA/TIA deben ser tomados en cuenta para los temas de cableado UTP, canalizaciones, salas de equipos, cuartos de telecomunicaciones y puestas a tierra? (indique los que corresponda, en forma separada).\\
+- ANSI/TIA/EIA-568-B\\
+- ANSI/TIA/EIA-569-A\\
+- ANSI/TIA/EIA-570-A\\
+- ANSI/TIA/EIA-606-A\\
+- ANSI/TIA/EIA-607\\
+- ANSI/TIA/EIA-758\\
+\item Explique lo que entiende por banda ISM. Indique los rangos de frecuencia en que se encuentran las distintas bandas ISM definidas, además de sus aplicaciones típicas.\\
+
 
   
   
