--- a/respuestas.tex
+++ b/respuestas.tex
@@ -338,8 +338,10 @@ y las funciones que cumplen.\\
     La tasa de transmision de la Ethernet normal es de 10Mbps, la de Fast Ethernet es de 100Mbps, y la Gigabit Ethernet es de 1Gbps\\
     \item Indique la conﬁguracion de pines en conectores RJ45 para cables UTP cruzados FastEthernet y GigabitEthernet(falta)\\
     \item  Explique lo que entiende por la unidad decibel (dB)\\
-    Es una relacion entre dos potencias electricas\\
-    \item Si una senal viaja desde un punto A a un punto B. En el punto A la senal tiene una potencia de 100 mW y en el punto B tiene 90 mW. Indique el factor de atenuacion en dB(falta)\\
+    Un decibel es una unidad de medida relativa, ya que expresa una razón logarítmica entre dos cantidades distintas.\\
+    \item Si una senal viaja desde un punto A a un punto B. En el punto A la senal tiene una potencia de 100 mW y en el punto B tiene
+    90 mW. Indique el factor de atenuacion en dB(falta)\\
+    Usando la formula K = 10xlog(P1/P2), con K = factor de atenuación, tenemos que nuestro factor de atenuación es de 10xlog(10/9)
     \item Si la atenuacion de una senal a trav´es de un medio guiado es de -10 dB. Indique la potencia de la senal recibida si se transmiti´o a una potencia de 300 mW(falta)\\
     \item Explique lo que entiende por relacion senal a ruido SNR en dB\\
     Es la relacion entre la potencia que transmite y la potencia del ruido que la daña\\
