--- a/respuestas.tex
+++ b/respuestas.tex
@@ -340,9 +340,13 @@ y las funciones que cumplen.\\
     \item  Explique lo que entiende por la unidad decibel (dB)\\
     Un decibel es una unidad de medida relativa, ya que expresa una razón logarítmica entre dos cantidades distintas.\\
     \item Si una senal viaja desde un punto A a un punto B. En el punto A la senal tiene una potencia de 100 mW y en el punto B tiene
-    90 mW. Indique el factor de atenuacion en dB(falta)\\
+    90 mW. Indique el factor de atenuacion en dB\\
     Usando la formula K = 10xlog(P1/P2), con K = factor de atenuación, tenemos que nuestro factor de atenuación es de 10xlog(10/9)
-    \item Si la atenuacion de una senal a trav´es de un medio guiado es de -10 dB. Indique la potencia de la senal recibida si se transmiti´o a una potencia de 300 mW(falta)\\
+    \item Si la atenuacion de una senal a través de un medio guiado es de -10 dB. Indique la potencia de la senal recibida si se
+    transmitió a una potencia de 300 mW\\
+    Con la formula K = 10xlog(P1/P2), con K = factor de atenuación, reemplazando nos queda: -10 = 10xlog(300/P2)
+    -> -10 = 10x2,48-10xlog(P2) -> 14,8 = -10xlog(P2) -> 1,48 = -log(P2) -> 10^1,48 = -P2 -> P2 = -30,2 mW (en teoria no te puede
+    quedar negativo, no se que mierda paso)
     \item Explique lo que entiende por relacion senal a ruido SNR en dB\\
     Es la relacion entre la potencia que transmite y la potencia del ruido que la daña\\
     \item  Explique con sus propias palabras el Teorema de la capacidad de Shannon. \\
