--- a/respuestas.tex
+++ b/respuestas.tex
@@ -289,13 +289,7 @@ y las funciones que cumplen.\\
 \item Explique las diferencias entre direcciones logicas y direcciones físicas.\\
     La direccion física MAC es un identificador de 48 bits que sirve para identificar de forma única a la tarjeta de red y no depende 
     del protocolo ni de la conexion utilizada en la red, en cambio la direccion logica(IP) si depende de estos.
-    Tambien la (IP) no existe fisicamente en cambio la direccion fisica si se encuentra dentro de el pc
-    La IP puede ser  variable en cambio la MAC no.-
-    
-    -La dirección logica(IP) no debe confundirse con la dirección MAC, porque la MAC es un identificador de 48 bits para identificar 
-    de forma única  a la tarjeta de red y no depende del protocolo de conexión utilizado ni de la red.\\
-    -La direecion fisica(MAC) es permanente y no varía, en cambio una direccion IP puede ser variable dependiendo del protocolo
-    de conexión utlizado en la red.\\
+    La (IP) no existe fisicamente ,en cambio la direccion fisica si se encuentra dentro de el pc.\\
 
     \item En relacion a una dirección MAC Ethernet, explique el propósito de los primeros 24 bits. ¿Qué es OUI en una direccion MAC?,
     ¿qué indica una dirección MAC de destino FF-FF-FF-FF-FF-FF?.\\
